# benchmarks

./: .gitignore  CMakeLists.txt
179.art/src/: build.sh  ref.sh  test.sh  train.sh
401.bzip2/src/: CMakeLists.txt
456.hmmer/data/test/input/: bombesin.hmm.new
456.hmmer/data/train/input/: leng100.hmm.new
456.hmmer/src/: CMakeLists.txt
505.mcf_r/src/: CMakeLists.txt  cmake_install.cmake  defines.h  doBruteForceWithClang.sh  mcf.c  mcfutil.c  test  test505  Собранные.txt
519.lbm_r/Docs/: 519.lbm_r.txt
519.lbm_r/src/: CMakeLists.txt  Makefile  cmake_install.cmake  perf.data  perf.data.old  test  test519
531.deepsjeng_r/: Readme сборки и запуска теста.docx
531.deepsjeng_r/src/: 531.deepsjeng_r.txt  CMakeLists.txt  config.h  state.h  test
